made slight adjustment to Card css and HappyDosePage for margins to ensure when moving spacing the hover size doesn't make them overlap

--- a/not_ok/src/components/Card/Card.module.css
+++ b/not_ok/src/components/Card/Card.module.css
@@ -10,6 +10,8 @@
     /*removed as positioning with flex in bigger div
     margin-left: 5rem;*/
     margin-top: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
 
     background-color: rgba(255,255,255,0.8);
     border-radius: 3px;
