--- a/not_ok/src/pages/HappyDosePage.module.css
+++ b/not_ok/src/pages/HappyDosePage.module.css
@@ -45,7 +45,7 @@ h2 {
 
     display: flex;
     flex-wrap: wrap;
-    margin: 0 2rem;
+    margin: 0 2rem 0 1rem;;
     justify-content: space-around;
     align-content: space-around;
     /*width needed to made the items space-around, no idea why!*/
