--- a/not_ok/src/pages/HomePage.module.css
+++ b/not_ok/src/pages/HomePage.module.css
@@ -19,7 +19,7 @@
     display: flex;
     width: 100%;
     justify-content: center;
-    margin: 10% 2rem;
+    margin: 8% 2rem 2rem 2rem;
 }
 
 a {
